--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,104 @@
-absl-py
-appnope
-argon2-cffi
-astunparse
-async-generator
-attrs
-backcall
-bleach
-cachetools
-certifi
-cffi
-chardet
-click
-cycler
-decorator
-defusedxml
-entrypoints
-Flask
-flatbuffers
-gast
-google-auth
-google-auth-oauthlib
-google-pasta
-grpcio
-h5py
-idna
-ipykernel
+absl-py==0.11.0
+appnope==0.1.2
+argon2-cffi==20.1.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.3.0
+cachetools==4.2.1
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+click==7.1.2
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+Flask==1.1.2
+flatbuffers==1.12
+gast==0.3.3
+google-auth==1.26.1
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.10
+ipykernel==5.4.3
 ipython
 ipython-genutils
-ipywidgets
-itsdangerous
-jedi
-Jinja2
-joblib
-jsonschema
-jupyter
-jupyter-client
-jupyter-console
-jupyter-core
-jupyterlab-pygments
-jupyterlab-widgets
-Keras-Preprocessing
-kiwisolver
-Markdown
-MarkupSafe
-matplotlib
-mistune
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-notebook
-numpy
-oauthlib
-opencv-python
-opt-einsum
-packaging
-pandas
-pandocfilters
-parso
-pexpect
-pickleshare
-Pillow
-prometheus-client
-prompt-toolkit
-protobuf
-ptyprocess
-pyasn1
-pyasn1-modules
-pycparser
-Pygments
-pyparsing
-pyrsistent
-python-dateutil
-pytz
-PyYAML
-pyzmq
-qtconsole
-QtPy
-requests
-requests-oauthlib
-rsa
-scikit-learn
-scipy
-Send2Trash
-six
-sklearn
-tensorboard
-tensorboard-plugin-wit
-tensorflow
-tensorflow-estimator
-termcolor
-terminado
-testpath
-threadpoolctl
-tornado
-traitlets
-typing-extensions
-urllib3
-wcwidth
-webencodings
-Werkzeug
-widgetsnbextension
-wrapt
+ipywidgets==7.6.3
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.3
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.11
+jupyter-console==6.2.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.3
+MarkupSafe==1.1.1
+matplotlib==3.3.4
+mistune==0.8.4
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+notebook==6.2.0
+numpy==1.19.5
+oauthlib==3.1.0
+opencv-python==4.5.1.48
+opt-einsum==3.3.0
+packaging==20.9
+pandas==1.2.2
+pandocfilters==1.4.3
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.1.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.16
+protobuf==3.14.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.8.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+qtconsole==5.0.2
+QtPy==1.9.0
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7
+scikit-learn==0.24.1
+scipy==1.6.0
+Send2Trash==1.5.0
+six==1.15.0
+sklearn==0.0
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+terminado==0.9.2
+testpath==0.4.4
+threadpoolctl==2.1.0
+tornado==6.1
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
