--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ oauthlib==3.1.0
 opencv-python==4.5.1.48
 opt-einsum==3.3.0
 packaging==20.9
-pandas==1.2.2
+pandas
 pandocfilters==1.4.3
 parso==0.8.1
 pexpect==4.8.0
