--- a/requirements.txt
+++ b/requirements.txt
@@ -81,10 +81,10 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7
 scikit-learn==0.24.1
-scipy==1.6.0
+scipy
 Send2Trash==1.5.0
 six==1.15.0
-sklearn==0.0
+sklearn
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
 tensorflow==2.4.1
