--- a/requirements.txt
+++ b/requirements.txt
@@ -94,7 +94,7 @@ terminado==0.9.2
 testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.1
-traitlets==5.0.5
+traitlets
 typing-extensions==3.7.4.3
 urllib3==1.26.3
 wcwidth==0.2.5
