--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ google-auth==1.26.1
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
 grpcio==1.32.0
+gunicorn
 h5py==2.10.0
 idna==2.10
 ipykernel==5.4.3
